--- a/Countries.iOS/Countries.iOS.csproj
+++ b/Countries.iOS/Countries.iOS.csproj
@@ -161,5 +161,9 @@
     <BundleResource Include="Resources\green.png" />
     <BundleResource Include="Resources\twitter_logo.png" />
     <BundleResource Include="Resources\facebook_logo.png" />
+    <BundleResource Include="Resources\bitcoin.png" />
+    <BundleResource Include="Resources\facebook.png" />
+    <BundleResource Include="Resources\twitter.png" />
+    <BundleResource Include="Resources\instagram.png" />
   </ItemGroup>
 </Project>
