--- a/Countries/Countries.csproj
+++ b/Countries/Countries.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="MvvmLightLibs" Version="5.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
